# shm

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  EXPERIMENTS.md  PERFORMANCE_PROPOSAL.md  README.md  SPECIFICATION.md  THIRD_PARTY_NOTICES.md  Taskfile.yaml  Taskfile.yml  benchmark_1.txt  benchmark_4.txt  benchmark_8.txt  go.mod  repro_bug  repro_server  repro_stream  results.txt  test_guest_call_negative_resp  test_stream_leak
.Jules/: palette.md
.jules/: bugtracker.md
.jules_tmp/: SAFETY_PROPOSAL.md
LICENSES/: Apache-2.0.txt
benchmarks/: CMakeLists.txt  harness.ps1  ipc.fbs  main.cpp  run.ps1  run.sh  run_bench.sh  run_matrix.sh  run_profile.sh  run_stream.sh  shm_benchmark
benchmarks/go/: benchmark  go.mod  go_bench  main.go  main_new.go  server  shm_server
benchmarks/go/ipc/: AddRequest.go  AddResponse.go  Message.go  MyRandRequest.go  MyRandResponse.go  Payload.go
benchmarks/include/: ipc_generated.h
build_tests/: shmConfig.cmake
build_tests/tests/: guest_call_test  test_guest_call_negative_resp  test_host_async_guest_call  test_host_hang  test_init_safety  test_invalid_guest_call_size  test_ipchost_compilation  test_protocol_version  test_send_negative  test_send_truncation  test_short_timeout  test_shutdown_compilation  test_shutdown_hang  test_slot_leak  test_slot_recovery  test_zerocopy_bug
cmake/: shmConfig.cmake.in
docs/: PROTOCOL.md
experiments/pingpong/: README.md  common.h  guest  host  main.cpp  main.go  run.sh
experiments/pingpong/go/: guest  main.go
experiments/pingpong1kb/: RESULTS.md  common.h  main.cpp  run.sh
experiments/pingpong1kb/go/: main.go
experiments/pingpong_aeron/: BENCHMARK_COMPARISON.md  CMakeLists.txt  common.h  main.cpp  run.sh
experiments/pingpong_coordinator/: common.h  main.cpp  main.go  run.sh
experiments/pingpong_coordinator/go/: main.go
experiments/pingpong_coro/: CMakeLists.txt  CoroutineUtils.h  Scheduler.h  ShmAwaiter.h  common.h  main.cpp  run_benchmark.sh
experiments/pingpong_coro/go/: main.go
experiments/pingpong_multiring/: .gitignore  RESULTS.md  common.h  main.cpp  run.sh
experiments/pingpong_multiring/go/: main.go
experiments/pingpong_optimized/: RESULTS.md  common.h  guest  host  main.cpp  run.sh
experiments/pingpong_optimized/go/: main.go
experiments/pingpong_queue/: common.h  main.cpp  run.sh
experiments/pingpong_queue/go/: main.go
experiments/pingpong_release/: README.md  common.h  main.cpp  run.sh
experiments/pingpong_release/go/: main.go
experiments/results/: CORO_RESULTS.md  SUMMARY.md  compiler_opts_success.txt  final_verification.txt
experiments/xll/: Taskfile.yml  rpc.fbs
experiments/xll/cpp/: CMakeLists.txt  MyAddin.cpp  MyAddin.def  PascalString.cpp  PascalString.h  logger.cpp  logger.h
experiments/xll/go/: main.go
go/: affinity.go  affinity_test.go  asm_windows_amd64.s  batch_test.go  bug_intmin_test.go  bug_repro_test.go  client.go  cpu_pause_amd64.s  direct.go  direct_lifecycle_test.go  direct_test.go  fastpath_test.go  go.mod  guest.go  guest_busy_wait_test.go  guest_new.go  guest_slot.go  guest_stream_test.go  init_fail_test.go  ipc_queue.go  leak_test.go  lease_test.go  locked_queue.go  logger_debug.go  logger_release.go  logging_test.go  monotonic.go  mpsc_queue.go  msgseq_test.go  open_shm_size_test.go  panic_test.go  platform.go  platform_linux.go  platform_unsupported_arch.go  platform_windows.go  queue.go  reclaim_aba_test.go  reclaim_crash_test.go  reclaim_test.go  regression_test.go  (+22 more)
go/tests/shutdown_guest/: main.go
include/: IPCProtocol.h  IPCUtils.h  MPSCQueue.h  SPSCQueue.h
include/shm/: DirectHost.h  GuestCallWorker.h  IPCHost.h  IPCUtils.h  Logger.h  Platform.h  Result.h  RingBuffer.h  RingBufferUtils.h  SlotAllocator.h  Stream.h  StreamReassembler.h  WaitStrategy.h
src/: DirectHost.h  IPC.cpp  IPC.h  IPCHost.cpp  IPCHost.h  Platform.h  QueueHost.h
tests/: CMakeLists.txt  DirectShutdownTest.cpp  batch_test  batch_test.cpp  guest_call_test.cpp  msgid_test.cpp  msgseq_test.cpp  repro_handler_limitation.cpp  test_double_host.cpp  test_guest_call_negative_resp.cpp  test_guest_call_overflow  test_guest_call_overflow.cpp  test_guest_call_race.cpp  test_guest_stream.cpp  test_guest_worker_sleep_only.cpp  test_held_slot.cpp  test_host_async_guest_call.cpp  test_host_hang.cpp  test_init_safety.cpp  test_invalid_guest_call_size.cpp  test_ipchost_compilation.cpp  test_ipchost_shutdown.cpp  test_logging.cpp  test_msgseq_validation.cpp  test_nested_call.cpp  test_nested_corruption.cpp  test_protocol_version.cpp  test_reassembler_contract.cpp  test_ringbuffer.cpp  test_send_negative.cpp  test_send_null.cpp  test_send_truncation.cpp  test_short_timeout.cpp  test_shutdown_compilation.cpp  test_shutdown_hang.cpp  test_shutdown_stuck.cpp  test_slot_leak.cpp  test_slot_recovery.cpp  test_stability.cpp  test_stream.cpp  (+7 more)
tests/go/guest_call/: go.mod  main.go
tests/go_integration/: main.go
